--- a/css/style.css
+++ b/css/style.css
@@ -16,23 +16,25 @@ body {
 }
 
 
-.blog-masthead {padding-top:0px;
+.mynavbar {padding-top:0px;
   background-color: #428bca;
-  box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
+	
 }
 
 /* Nav links */
-.blog-nav-item {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-  font-weight: 500;
+.mynavbar-item {
+   padding: 0px;
+
   color: #cdddeb;
 }
-.blog-nav-item:hover,
-.blog-nav-item:focus {
+.mynavbar-item:hover,
+.mynavbar-item:focus {
   color: #fff;
   text-decoration: none;
 }
+.navbar-brand
+{padding:10px;
+color: #cdddeb;}
 
-
+.row
+{width:100%;}
