--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 
-.mynavbar {padding-top:0px;
+.mynavbar {
   background-color: #428bca;
-	
+  height: 90px;
 }
 
 /* Nav links */
@@ -34,7 +34,8 @@ body {
 }
 .navbar-brand
 {padding:10px;
-color: #cdddeb;}
+color: #cdddeb;
+font-size: 50px;}
 
 .row
 {width:100%;}
